--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,8 +12,26 @@
   background-position: center;
   height: 100vh;
   width: 100%;
-  div{
+  background-repeat: no-repeat;
+  #logo{
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    justify-items: center;
   }
+}
+#logo{
+  margin-top: 50px;
+  margin-bottom: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  justify-items: center;
+}
+.login{
+  with:400px;
 }
 #app-navbar-collapse{
   background: #847F80;
