--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8335,6 +8335,8 @@ button.close {
 
 #app {
   padding-bottom: 50px;
+  min-height: 83vh;
+  border-top: 20px solid #E59F5C;
 }
 
 #login-blade {
@@ -8522,13 +8524,14 @@ button.close {
 .lastNews h3 {
   padding-bottom: 15px;
   margin-top: 0;
+  padding-left: 15px;
 }
 
 footer {
   background: #C2CBAD;
   padding-top: 30px;
   color: black;
-  position: rel;
+  position: relative;
   bottom: 0;
   width: 100%;
   line-height: 1.2;
@@ -8538,7 +8541,16 @@ footer span {
   color: #E3799F;
 }
 
-footer .legales {
+.legales {
   background: #847F80;
+  padding: 5px;
+  position: relative;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+.contact {
+  margin-top: 50px;
 }
 
