--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,6 +7,8 @@
 
 #app {
   padding-bottom: 50px;
+  min-height: 83vh;
+  border-top: 20px solid #E59F5C;
 }
 
 #login-blade {
@@ -111,7 +113,6 @@
 }
 
 
-
 #lastPost {
   padding: 10px;
   background: #B4D5E9;
@@ -121,13 +122,16 @@
   background: #847F80;
   color: white
 }
-#navBG{
+
+#navBG {
   background: #847F80;
 }
-.pageTitle{
+
+.pageTitle {
   padding-left: 15px;
   margin-bottom: 45px;
 }
+
 .navBlade {
 
   .logo {
@@ -172,27 +176,32 @@
 .pdf {
   margin: 5px;
 }
+
 //page show
 #pageContent {
   margin-top: 50px;
   margin-bottom: 50px;
 
 }
-.lastNews{
-  p{
+
+.lastNews {
+  p {
     padding: 15px;
   }
-  h3{
+
+  h3 {
     padding-bottom: 15px;
     margin-top: 0;
+    padding-left: 15px;
   }
 }
+
 //footer
 footer {
   background: #C2CBAD;
   padding-top: 30px;
   color: black;
-  position: rel;
+  position: relative;
   bottom: 0;
   width: 100%;
   line-height: 1.2;
@@ -201,7 +210,19 @@ footer {
     color: #E3799F;
   }
 
-  .legales {
-    background: #847F80;
-  }
+}
+
+.legales{
+  background: #847F80;
+  padding: 5px;
+  position: relative;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+.contact {
+
+    margin-top: 50px;
+
+
 }
