--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,7 +12,7 @@
 }
 
 #login-blade {
-  background-image: url('http://comite-adpa.fr/img/bcg.jpg');
+  background-image: url('https://comite-adpa.fr/img/bcg.jpg');
   background-position: center;
   height: 100vh;
   width: 100%;
