--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8340,7 +8340,7 @@ button.close {
 }
 
 #login-blade {
-  background-image: url("http://comite-adpa.fr/img/bcg.jpg");
+  background-image: url("https://comite-adpa.fr/file/bcg.jpg");
   background-position: center;
   height: 100vh;
   width: 100%;
