--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -131,7 +131,10 @@
   padding-left: 15px;
   margin-bottom: 45px;
 }
-
+.welcome-logo{
+  margin: auto;
+  padding-bottom: 20px;
+}
 .navBlade {
 
   .logo {
@@ -140,7 +143,7 @@
     margin: 20px;
 
     h2 {
-      margin-left: 50px;
+      margin-left: 10px;
     }
 
     h3 {
